# YaPZT_Module1

./: LICENSE.txt  README.md  sonar-project.properties
.github/workflows/: cpp-ci.yml
docs/: building.md  quality-model.md  specifications.als
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tst_save_file.cpp  tst_single_list.cpp
uml/: class.puml  sequence.puml  usecase.puml
